--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Dataset filter=lfs diff=lfs merge=lfs -text
 weights/inception.hdf5 filter=lfs diff=lfs merge=lfs -text
+weights/ensemble_model.hdf5 filter=lfs diff=lfs merge=lfs -text
